--- a/homeStyle.css
+++ b/homeStyle.css
@@ -30,6 +30,7 @@ html, body {
 .openButton:hover{
     background-color: black;
     color: white;
+    cursor: pointer;
 }
 
 
@@ -47,7 +48,7 @@ html, body {
     z-index: 1; /* Stays in front of the page */
     top: 0; /* Stays at the top */
     left: 0; /* This nav bar will be comming from the left, change it to right if we want one in the right side */
-    background-color: blue;
+    background-color: green;
     overflow-x: hidden; /* Disables the horizontal scrolling*/
     padding-top: 0; /* Places content 50px from the top */
     transition: 0.5s; /*Shows the sliding effect*/
@@ -70,9 +71,58 @@ html, body {
     margin-top: 0;
 }
 
+.HowToWinImg{
+    width: 250px;
+    height: 200px;
+    margin-top: -20px;
+}
+
+.winOne{
+    position: absolute;
+    left: 5%;
+    top: 10%;
+}
+
+.winTwo{
+    position: absolute;
+    left: 30%;
+    top: 10%;
+}
 
 
+.winThree{
+    position: absolute;
+    left: 5%;
+    top: 50%;
+}
 
+
+.winFour{
+    position: absolute;
+    left: 30%;
+    top: 50%;
+}
+
+.howToPlay{
+    position: absolute;
+    width: 600px;
+    left: 55%;
+    top: 9.5%;
+    font-size: 24px;
+    text-align: left;
+}
+
+.howToPlay li {
+    margin: 5px;
+}
+
+.flipExample{
+    display: flex;
+    position: absolute;
+    right: 6%;
+    top: 65%;
+    font-size: 50px;
+}
 
 
 
@@ -177,7 +227,7 @@ html, body {
 
 
 
-.GameScreen{
+.LeaderBoard{
     height: 0%; /* We start it at 0 because it should not appear yet, changes with JS*/
     width: 100%;
     position: fixed; /* It will stay in place*/
@@ -190,7 +240,7 @@ html, body {
     transition: 0.5s; /*Shows the sliding effect*/
 }
 
-.GameScreen p{ /* This just changes the paragraph tags and how they are displayed in the side bar*/
+.LeaderBoard p{ /* This just changes the paragraph tags and how they are displayed in the side bar*/
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     color: white;
@@ -199,7 +249,38 @@ html, body {
     font-size: 30px;
 }
 
-.closeGameButton{
+.LeaderBoard table{
+    background-color: white;
+    border: 1px black solid;
+    border-collapse: collapse;
+    left: 35%;
+    top: 20%;
+    width: 500px;
+    text-align: center;
+    position: sticky;
+    overflow-y: scroll;
+}
+
+.LeaderBoard tr{
+    border: 1px black solid;
+    border-collapse: collapse;
+    height: 50px;
+    background-color: lightgray;
+}
+.LeaderBoard tr:nth-child(even){
+    background-color: grey;
+}
+.LeaderBoard tr:hover {
+    background-color: white;
+}
+
+
+.LeaderBoard td{
+    border: 1px black solid;
+    border-collapse: collapse;
+}
+
+.closeLeaderBoardButton{
     position: absolute; /* The x button should not move*/
     top: 0px; /* This will be at the top of the page */
     right: 15px; /* Moved 15 px from the right*/
@@ -209,7 +290,9 @@ html, body {
 
 
 
-
+.closeInfoButton:hover, .closeSettingsButton:hover, .closeAboutButton:hover, .closeLeaderBoardButton:hover{
+    cursor: pointer;
+}
 
 
 
@@ -227,6 +310,17 @@ html, body {
 }
 
 .backToHomeButton{
+    position: fixed;
+    top: 25%;
+    right: 5%;
+    transform: translate(-50%);
+    border: 1px black solid;
+    width: 5rem;
+    text-align: center;
+    cursor: pointer;
+}
+
+.flipButton{
     position: fixed;
     top: 35%;
     left: 15%;
